--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">KotlinSample</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="hello_kotlin">Hello Kotlin!</string>
 </resources>
